--- a/شرکت شوکوپارس.html
+++ b/شرکت شوکوپارس.html
@@ -67,7 +67,7 @@
 <body>
   <div class="container">
   
-    <img src="./شرکت شوکوپارس_files/ChocoPars-Logo.png" alt="لوگوی شوکوپارس">
+    <img src="ChocoPars-Logo.png" alt="لوگوی شوکوپارس">
 
     <h2>شرکت شوکوپارس</h2>
     <hr>
